...
                  style={styles.fieldInput}
                />
              )}
            />

            <CustomButton
              title="Đăng nhập"
              onPress={handleSubmit(onSubmit)}
              loading={loading}
              style={styles.loginBtn}
              textStyle={styles.loginBtnText}
            />

...
